Simplified and fixed overflow in #assets-grid. Centered all assets except header title and search.

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -8,8 +8,8 @@
   --primary-bg-color: black;
   --secondary-bg-color: #1f1f1f;
   --global-border-radius: 5px;
-  --btn-text-color: #0F0F0F;
-  --primary-text-color: #FEFEFE;
+  --btn-text-color: #0f0f0f;
+  --primary-text-color: #fefefe;
   --secondary-text-color: #adadad;
 }
 
@@ -39,6 +39,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 /*
@@ -54,7 +56,7 @@ body {
 
 #bg-header {
   /* Holds the img background url */
-  height: 500px;
+  height: 600px;
   width: 100%;
   position: relative;
   padding-top: 10px;
@@ -73,16 +75,20 @@ body {
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 10px;
-  padding-bottom: 10px;
   border-radius: var(--global-border-radius);
 }
 
 #bg-logo {
   position: absolute;
-  bottom: 20px;
+  bottom: 40px;
   background-size: contain;
   height: 200px;
   max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
@@ -134,6 +140,7 @@ body {
 
 #assets-container {
   border-radius: var(--global-border-radius);
+  width: 100%;
 }
 
 /*
@@ -141,6 +148,10 @@ body {
 * asset-btns Div
 *
 */
+
+#assets-btns-wrapper {
+  text-align: center;
+}
 
 .asset-btns {
   border-radius: 6px;
@@ -201,44 +212,10 @@ body {
 
 #assets-grid {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: repeat(auto-fit, 300px); /* fixed width per item */
+  justify-content: center;
   justify-items: center;
-  gap: 20px;
-}
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  #assets-grid {
-    grid-template-columns: auto;
-  }
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  #assets-grid {
-    grid-template-columns: auto;
-  }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  #assets-grid {
-    grid-template-columns: auto auto;
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  #assets-grid {
-    grid-template-columns: auto auto auto;
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  #assets-grid {
-    grid-template-columns: auto auto auto auto;
-  }
+  row-gap: 50px;
 }
 
 /*
@@ -264,7 +241,15 @@ body {
   color: var(--secondary-text-color);
 }
 
+.asset-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+}
+
 .asset-card img {
   cursor: pointer;
   border-radius: var(--global-border-radius);
+  width: 100%; /* Stops img from exceeding grid item width */
 }
